--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update \
 COPY ./requirements /requirements
 RUN pip install -r /requirements/local.txt
 
-COPY ./compose/production/django/entrypoint /entrypoint
+COPY ./compose/local/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
@@ -29,6 +29,10 @@ RUN chmod +x /start
 COPY ./compose/local/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r$//g' /start-celeryworker
 RUN chmod +x /start-celeryworker
+
+COPY ./compose/local/django/celery/worker/start2 /start-celeryworker2
+RUN sed -i 's/\r$//g' /start-celeryworker2
+RUN chmod +x /start-celeryworker2
 
 COPY ./compose/local/django/celery/beat/start /start-celerybeat
 RUN sed -i 's/\r$//g' /start-celerybeat
